--- a/ComputerGraphicsNPractice/Assignment3/MyName/CMakeLists.txt
+++ b/ComputerGraphicsNPractice/Assignment3/MyName/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.23)
-project(Assignment4)
+project(MyName)
 
 set(CMAKE_CXX_STANDARD 20)
 
 add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 
-add_executable(Assignment4 main.cpp main.h name.hpp sierpinski_gasket.hpp)
+add_executable(MyName main.cpp name.h)
