--- a/ComputerGraphicsNPractice/Assignment3/SierpinskiGasket/CMakeLists.txt
+++ b/ComputerGraphicsNPractice/Assignment3/SierpinskiGasket/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.23)
-project(Assignment5)
+project(SierpinskiGasket)
 
 set(CMAKE_CXX_STANDARD 20)
 
 add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 
-add_executable(Assignment5 main.cpp)
+add_executable(SierpinskiGasket main.cpp)
